# addressforge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_console.sh
docs/en/: README.md  addressforge-api.md  addressforge-design.md  addressforge-developer-workflow.md  addressforge-final-product-plan.md  addressforge-model-training-guide.md  addressforge-operations-ui-experience-issue.md  addressforge-quickstart.md  addressforge-release-benchmark.md  addressforge-requirements.md  addressforge-roadmap.md  addressforge-task-breakdown.md  addressforge-version-plan.md  iteration-summary-2026-04-28.md  operation-subsystem-guide.md
docs/zh/: README.md  addressforge-api.md  addressforge-console-automation-plan.md  addressforge-design.md  addressforge-developer-workflow.md  addressforge-final-product-plan.md  addressforge-iteration-2-tasks.md  addressforge-iteration-3-tasks.md  addressforge-iteration-4-7-tasks.md  addressforge-model-training-guide.md  addressforge-operations-ui-experience-issue.md  addressforge-quickstart.md  (+7 more)
examples/: canada_address_benchmark.jsonl  parse_request.json  sample_raw_addresses.csv
scripts/: import_csv.sh  init_schema.sh  run_api.sh  run_console.sh  run_control_worker.sh  run_ingestion.sh  run_training.sh  test_llm_connection.py  test_llm_real_data.py
sql/: addressforge_schema.sql
templates/: base.html  batch.html  dashboard.html  reports.html  review.html
tests/: test_asset_promotion.py  test_canadian_address_quality.py  test_gold_sampling.py  test_profiles.py  test_reranker.py
web/: package.json
(+56 files in other folders)
